Archive2/57/afbeb48b38696f/output
main.cpp: In function 'int main()':
main.cpp:30:9: error: 'cout' is not a member of 'std'
         std::cout << s << "\n";
         ^
